[gd_scene format=3 uid="uid://5ao516x7wlwj"]

[ext_resource type="Script" uid="uid://dkv5qjyvchsbq" path="res://systems/shared/ui/price_label.gd" id="1_8mmb1"]
[ext_resource type="Theme" uid="uid://hk0yuful0lnf" path="res://systems/game/ui/resources/styles/label_header.tres" id="1_sslbx"]
[ext_resource type="Script" uid="uid://66vei6tfuqmg" path="res://systems/shared/icon.gd" id="2_52pxn"]
[ext_resource type="Texture2D" uid="uid://bdfv1qrun4jrb" path="res://assets/graphics/icons/general/currency_dust.png" id="3_ciue6"]

[node name="PriceLabel" type="HBoxContainer" unique_id=2100062]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_8mmb1")

[node name="TextLabel" type="Label" parent="." unique_id=1430485880]
layout_mode = 2
theme = ExtResource("1_sslbx")
text = "Buy Test ("

[node name="Icon" type="TextureRect" parent="." unique_id=240270778]
modulate = Color(0, 0.8509804, 0.5411765, 1)
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
texture = ExtResource("3_ciue6")
expand_mode = 1
stretch_mode = 5
script = ExtResource("2_52pxn")
icon_to_set = "dust"
size_to_set = "small"
metadata/_custom_type_script = "uid://66vei6tfuqmg"

[node name="CostLabel" type="Label" parent="." unique_id=902744011]
layout_mode = 2
theme = ExtResource("1_sslbx")
text = "500)"
horizontal_alignment = 1
vertical_alignment = 1
